Adding first version of index code

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- BOOTSTRAP 4 -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
 <!-- JQUERY 3 AND POPPER -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+
+<!-- BOOTSTRAP 4 -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 <!-- PROJECT CSS -->
 <link rel="stylesheet" href="css/dist/main/styles.css">
@@ -18,15 +18,184 @@
 </head>
 
 <body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md">
-      </div>
-      <div class="col-sm">
+<header class="container mb-3 mt-2">
+  <div class="row">
+    <div class="col-sm-12 col-lg-7"> <img class="mt-2" src="images/algaecal-logo.png" width="160" height="56" alt=""/> </div>
+    <div class="col-sm-12 col-lg-5">
+      <span class="tap-to-talk">Tap to Talk <a class="api-phone" href="tel:18008200184"></a></span>
+      <span class="bone-health-specialist"><img src="images/phone-icon.png" width="20" height="20" alt=""/> Speak to our Bone Health Specialists!</span>
+    </div>
+  </div>
+</header>
+<div class="row hero-green mb-5 p-0 m-0">
+  <div class="container col-12 m-0 p-4">
+    <h1 class="text-center text-uppercase"><span class="white-line mr-3"></span>Introducing<span class="white-line ml-3"></span></h1>
+    <h1 class="intro">The <strong class="text-uppercase">only</strong> Calcium Supplement that <strong><span class="custom-underlne">Increases Bone Density*</span></strong><span><br>
+    ...or Your Money Back</span></h1>
+  </div>
+</div>
+<div class="container pb-5">
+  <div class="row">
+    <div class="col-sm-4">
+      <p class="message">Build <strong>brand new bone</strong> within 6 months with this <strong>rare algae</strong> calcium ...even if you're 85!</p>
+    </div>
+    <div class="col-sm-8">
+      <div class="play-video">
+        <img class="img-fluid" src="images/video-play-button.png" width="965" height="543" alt=""/>
       </div>
     </div>
   </div>
-
+</div>
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-4">
+      <div class="product text-center my-4 p-4">
+        <div class="sale">20% <span>Off</span></div>
+        <h3>3 Month Supply</h3>
+        <p>4 AlgaeCal Plus<br>
+        3 Strontium Boost</p>
+        <img class="img-fluid" src="images/3-month-supply.png" width="222" height="135" alt=""/>
+        <div class="price"><sup>$</sup>233 <span class="currency">USD</span></div>
+        <div class="day">Only <strong><sup>$</sup>2.58</strong>/Day!</div>
+        <a class="add-to-cart" href="#">
+          <img src="images/7-year-guarantee.png" width="60" height="60" alt=""/> Add to Cart <span class="arrow-right"></span>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-4">
+      <div class="row px-4">
+        <div class="col-12 popular mb-4">
+          <h3 class="most">Most Popular</h3>
+          <div class="product text-center mb-4 p-4">
+            <div class="sale">35% <span>Off</span></div>
+            <h3>6 Month Supply</h3>
+            <p>8 AlgaeCal Plus<br>
+            6 Strontium Boost</p>
+            <img class="img-fluid" src="images/6-month-supply.png" width="255" height="139" alt=""/>
+            <div class="price"><sup>$</sup>337 <span class="currency">USD</span></div>
+            <div class="day">Only <strong><sup>$</sup>2.09</strong>/Day!</div>
+            <a class="add-to-cart" href="#">
+              <img src="images/7-year-guarantee.png" width="60" height="60" alt=""/> Add to Cart <span class="arrow-right"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-4">
+      <div class="product text-center my-4 p-4">
+        <div class="sale">38% <span>Off</span></div>
+        <h3>12 Month Supply</h3>
+        <p>16 AlgaeCal Plus<br>
+        12 Strontium Boost</p>
+        <img class="img-fluid" src="images/12-month-supply.png" width="245" height="140" alt=""/>
+        <div class="price"><sup>$</sup>717 <span class="currency">USD</span></div>
+        <div class="day">Only <strong><sup>$</sup>1.97</strong>/Day!</div>
+        <a class="add-to-cart" href="#">
+          <img src="images/7-year-guarantee.png" width="60" height="60" alt=""/> Add to Cart <span class="arrow-right"></span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container p-0 mb-5">
+  <div class="row m-0 p-0">
+    <div class="col m-0 p-0 text-center">
+      <img src="images/algaecal-plus-facts.png" width="344" height="649" alt=""/>
+    </div>
+    <div class="col m-0 p-0 text-center">
+      <img src="images/strontium-boot-facts.png" width="344" height="310" alt=""/>
+    </div>
+  </div>
+</div>
+<div class="container mb-5">
+  <div class="row">
+    <div class="col-sm-6 hero-green p-4 mb-4">
+      <div class="guarantee py-4 px-3">
+        <img class="mx-auto d-block" src="images/7-year-guarantee.png" width="150" height="150" alt=""/>
+        <h3 class="">Stronger Bones For 7 Years Guarantee</h3>
+        <p>When you follow directions for use of AlgaeCal Plus and Strontium Boost - we guarantee you will see increased bone density in EVERY follow-up bone scan you have while using these 2 products - or we will refund every penny you paid for our products between your scan, This guarantee extends to every scan you have for the next 7 years! Also, if you are unsatisfied at anytime you can return my product for a full refund, no questions asked! <a>Click Here for Details</a></p>
+        <img class="d-block mx-auto mt-4" src="images/dean-neuls.png" width="191" height="145" alt=""/>
+        <div class="signature">
+          <strong>Dean Neuls</strong><br>
+          CEO and Co-founder, <br>
+          AlgaeCal Inc.
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5 as-seen-on p-0 mb-4">
+      <h3 class="text-center p-2 mb-4">As Seen On:</h3>
+      <div class="row py-4 m-0">
+        <div class="col-3 col-sm-6 col-lg- text-center">
+          <img class="img-fluid" src="images/the_dr_oz_show_logo.png" width="264" height="158" alt=""/>
+        </div>
+        <div class="col-3 col-sm-6 text-center">
+          <img class="img-fluid" src="images/fox_news_channel_logo.png" width="167" height="158" alt=""/>
+        </div>
+        <div class="col-3 col-sm-6 text-center">
+          <img class="img-fluid" src="images/pbs-logo.png" width="314" height="158" alt=""/>
+        </div>
+        <div class="col-3 col-sm-6 text-center">
+          <img class="img-fluid" src="images/amazon-logo.png" width="391" height="158" alt=""/>
+        </div>
+      </div>
+      <div class="row px-4 pb-4 m-0">
+        <div class="col-6 col-sm-12 col-lg-12 pt-4">
+          <div class="row">
+            <div class="col-4">
+              <img class="img-fluid" src="images/forever-young-book.png" width="322" height="474" alt=""/>
+            </div>
+            <div class="col-8">
+              <strong><em>Forever Young</em></strong><br>
+              book by<br>
+              <strong>Nicholas Perricone</strong>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-sm-12 col-lg-12 pt-4">
+          <div class="row">
+            <div class="col-4">
+              <img class="img-fluid" src="images/your-bones-book.png" width="322" height="474" alt=""/>
+            </div>
+            <div class="col-8">
+              <strong><em>Forever Young</em></strong><br>
+              book by<br>
+              <strong>Nicholas Perricone</strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mb-5 reference">
+  <div class="row">
+    <div class="col-sm-12">
+      <h3>Scientific References</h3>
+      <ol>
+        <li>Marques A, Ferreira RJ, Santos E, et al. The accuracy of osteoporotic fracture risk prediction tools: a systematic review and meta-analysis. Ann Rheum Dis. 2015 Nov;74(11):1958-67. doi: 10.1136/annrheumdis-2015-207907. Epub 2015 Aug 6. PMID: 26248637</li>
+        <li>Riggs BL, Melton LJ 3rd. The worldwide problem of osteoporosis: insights afforded by epidemiology. Bone. 1995 Nov;17(5 Suppl):505S-511S. PMID: 8573428</li>
+        <li><a href="https://www.algaecal.com/expert-insights/prescription-drugs-that-cause-osteoporosis/">https://www.algaecal.com/expert-insights/prescription-drugs-that-cause-osteoporosis/</a></li>
+      </ol>
+      <a href="#">View Full Reference List...</a>
+    </div>
+  </div>
+</div>
+<footer class="text-center px-4">
+  <img src="images/algaecal-logo.png" width="160" height="56" alt=""/>
+  <nav>
+    <li>Shipping &amp; Returns</li>
+    <li>Health Disclaimer</li>
+    <li>Legal and Privacy Policy</li>
+    <li>Contact</li>
+    <li>Order Now</li>
+  </nav>
+  <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> AlgaeCal</p>
+</footer>
 </body>
+
+<!-- PROJECT JS -->
+<script src="js/dist/main/main.js"></script>
+<script src="http://fast.wistia.com/embed/medias/cecdwaq3dz.jsonp" async></script>
+<script src="http://fast.wistia.com/assets/external/E-v1.js" async></script>
 </html>
