Cleaning up code and adding comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+
+<!-- HEADER -->
 <header class="container mb-3 mt-2">
   <div class="row">
     <div class="col-sm-12 col-lg-7"> <img class="mt-2" src="images/algaecal-logo.png" width="160" height="56" alt=""/> </div>
@@ -27,6 +29,8 @@
     </div>
   </div>
 </header>
+
+<!-- HERO -->
 <div class="row hero-green mb-5 p-0 m-0">
   <div class="container col-12 m-0 p-4">
     <h1 class="text-center text-uppercase"><span class="white-line mr-3"></span>Introducing<span class="white-line ml-3"></span></h1>
@@ -34,6 +38,8 @@
     ...or Your Money Back</span></h1>
   </div>
 </div>
+
+<!-- VIDEO AREA -->
 <div class="container pb-5">
   <div class="row">
     <div class="col-sm-4">
@@ -46,6 +52,8 @@
     </div>
   </div>
 </div>
+
+<!-- PRODUCT -->
 <div class="container mt-5 mb-5">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-4">
@@ -97,6 +105,8 @@
     </div>
   </div>
 </div>
+
+<!-- LABELS/FACTS -->
 <div class="container p-0 mb-5">
   <div class="row m-0 p-0">
     <div class="col m-0 p-0 text-center">
@@ -107,6 +117,8 @@
     </div>
   </div>
 </div>
+
+<!-- GUARANTEE AND AS SEEN ON -->
 <div class="container mb-5">
   <div class="row">
     <div class="col-sm-6 hero-green p-4 mb-4">
@@ -168,6 +180,8 @@
     </div>
   </div>
 </div>
+
+<!-- REFERENCES -->
 <div class="container mb-5 reference">
   <div class="row">
     <div class="col-sm-12">
@@ -181,6 +195,8 @@
     </div>
   </div>
 </div>
+
+<!-- FOOTER -->
 <footer class="text-center px-4">
   <img src="images/algaecal-logo.png" width="160" height="56" alt=""/>
   <nav>
@@ -192,10 +208,13 @@
   </nav>
   <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> AlgaeCal</p>
 </footer>
+
 </body>
 
 <!-- PROJECT JS -->
 <script src="js/dist/main/main.js"></script>
+
+<!-- VIDEO JS -->
 <script src="http://fast.wistia.com/embed/medias/cecdwaq3dz.jsonp" async></script>
 <script src="http://fast.wistia.com/assets/external/E-v1.js" async></script>
 </html>
