Supplement fact label layout

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img class="img-fluid" src="images/video-play-button.png" width="965" height="543" alt=""/>
       </div>
 <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script>
-<div class="wistia_embed wistia_async_cecdwaq3dz" style="width:100%;height:100%;display: none;">&nbsp;</div>
+<div class="wistia_embed wistia_async_cecdwaq3dz" style="width:100%;height:411px;display: none;">&nbsp;</div>
 <script>
 window._wq = window._wq || [];
 
@@ -126,11 +126,134 @@ _wq.push({ id: "cecdwaq3dz", onReady: function(video) {
 <!-- LABELS/FACTS -->
 <div class="container p-0 mb-5">
   <div class="row m-0 p-0">
-    <div class="col m-0 p-0 text-center">
-      <img src="images/algaecal-plus-facts.png" width="344" height="649" alt=""/>
+    <div class="col-12 col-md-6 m-0 p-0 text-center">
+      <h1>AlgaeCal Plus</h1>
+      <section class="performance-facts">
+        <header class="performance-facts__header">
+          <h1 class="performance-facts__title">Supplement Facts</h1>
+          <p>2 Capsules Per Day</p>
+          <p>Servings Per Container: 30</p>
+        </header>
+        <table class="performance-facts__table">
+          <thead>
+            <tr>
+              <th colspan="3" class="small-info">
+                Amount Per Serving
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="thick-row">
+              <td colspan="3" class="small-info">
+                <b>% Daily Value*</b>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">
+                <b>Vitamin C</b>
+                50mg<br><sup>(as calcium ascorbate)</sup>
+              </th>
+              <td>
+                <b>84%</b>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">
+                <b>Vitamin D3</b>
+                1600 IU<br><sup>(as cholecalciferol)</sup>
+              </th>
+              <td>
+                <b>400%</b>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">
+                <b>Vitamin K2</b>
+                100mg<br><sup>(as menaquinone-7)</sup>
+              </th>
+              <td>
+                <b>126%</b>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">
+                <b>Calcium</b>
+                720mg<br><sup>(from algas calcareas)</sup>
+              </th>
+              <td>
+                <b>72%</b>
+              </td>
+            </tr>
+            <tr>
+              <th colspan="2">
+                <b>Magnesium</b>
+                350 mg<br><sup style="width: 50%;">(from algas calcareas and magnesium oxide)</sup>
+              </th>
+              <td>
+                <b>88%</b>
+              </td>
+            </tr>
+            <tr class="thick-row">
+              <th colspan="2">
+                <b>Boron</b>
+                3.0mg*<br><sup>(as glycinate)</sup>
+              </th>
+              <td>
+                <b></b>
+              </td>
+            </tr>
+            <tr class="thick-row">
+              <th colspan="2">
+                <sup><b>*Daily Value (DV) not established</b></sup>
+              </th>
+              <td>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </div>
-    <div class="col m-0 p-0 text-center">
-      <img src="images/strontium-boot-facts.png" width="344" height="310" alt=""/>
+    <div class="col-12 col-md-6 m-0 p-0 text-center">
+      <h1>Strontium Plus</h1>
+      <section class="performance-facts">
+        <header class="performance-facts__header">
+          <h1 class="performance-facts__title">Supplement Facts</h1>
+          <p>2 Capsules Per Day</p>
+          <p>Servings Per Container: 30</p>
+        </header>
+        <table class="performance-facts__table">
+          <thead>
+            <tr>
+              <th colspan="3" class="small-info">
+                Amount Per Serving
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="thick-row">
+              <td colspan="3" class="small-info">
+                <b>% Daily Value*</b>
+              </td>
+            </tr>
+            <tr class="thick-row">
+              <th colspan="2">
+                <b>Strontium</b>
+                <br><sup>(from Strontium Citrate)</sup>
+              </th>
+              <td>
+                <b>680mg*</b>
+              </td>
+            </tr>
+            <tr class="thick-row">
+              <th colspan="2">
+                <sup><b>*Daily Value (DV) not established</b></sup>
+              </th>
+              <td>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </div>
   </div>
 </div>
@@ -233,14 +356,14 @@ _wq.push({ id: "cecdwaq3dz", onReady: function(video) {
 <!-- BUY NOW -->
 <div class="container mb-5 buy-now">
   <div class="row">
-    <div class="col-5">
+    <div class="col-12 col-md-4">
     </div>
-    <div class="col-3">
-      <a class="add-to-cart" href="#products">
+    <div class="col-12 col-md-4">
+      <a class="add-to-cart text-center" href="#products">
         <img src="images/7-year-guarantee.png" width="60" height="60" alt=""/> Buy Now <span class="arrow-right"></span>
       </a>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-md-4">
     </div>
   </div>
 </div>
