Cleaning video code Added buy now to video timer as anchor link is irrelevant without products showing

--- a/index.html
+++ b/index.html
@@ -49,23 +49,8 @@
       <div class="play-video">
         <img class="img-fluid" src="images/video-play-button.png" width="965" height="543" alt=""/>
       </div>
-<script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script>
-<div class="wistia_embed wistia_async_cecdwaq3dz" style="width:100%;height:411px;display: none;">&nbsp;</div>
-<script>
-window._wq = window._wq || [];
-
-// target our video by the first 3 characters of the hashed ID
-_wq.push({ id: "cecdwaq3dz", onReady: function(video) {
-  // at 10 seconds, do something amazing
-  video.bind('secondchange', function(s) {
-    if (s >= 133) {
-      // Insert code to do something amazing here
-      $(".products").css({"display":"flex"});
-    }
-  });
-}});
-
-</script>
+      <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script>
+      <div class="wistia_embed wistia_async_cecdwaq3dz" style="width:100%;height:411px;display: none;">&nbsp;</div>
     </div>
   </div>
 </div>
@@ -354,7 +339,7 @@ _wq.push({ id: "cecdwaq3dz", onReady: function(video) {
 </div>
   
 <!-- BUY NOW -->
-<div class="container mb-5 buy-now">
+<div class="container mb-5 buy-now" style="display: none;">
   <div class="row">
     <div class="col-12 col-md-4">
     </div>
